; ModuleID = '/home/carl/AnghaBench/freebsd/sys/ofed/drivers/infiniband/core/extr_ib_sa_query.c_ib_sa_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/ofed/drivers/infiniband/core/extr_ib_sa_query.c_ib_sa_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@tid = common dso_local global i32 0, align 4
@sa_client = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [32 x i8] c"Couldn't register ib_sa client\0A\00", align 1
@.str.1 = private unnamed_addr constant [40 x i8] c"Couldn't initialize multicast handling\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ib_sa_init() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 @get_random_bytes(i32* @tid, i32 4)
  %4 = call i32 @ib_register_client(i32* @sa_client)
  store i32 %4, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %0
  %8 = call i32 @pr_err(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0))
  br label %18

9:                                                ; preds = %0
  %10 = call i32 (...) @mcast_init()
  store i32 %10, i32* %2, align 4
  %11 = load i32, i32* %2, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %9
  %14 = call i32 @pr_err(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.1, i64 0, i64 0))
  br label %16

15:                                               ; preds = %9
  store i32 0, i32* %1, align 4
  br label %20

16:                                               ; preds = %13
  %17 = call i32 @ib_unregister_client(i32* @sa_client)
  br label %18

18:                                               ; preds = %16, %7
  %19 = load i32, i32* %2, align 4
  store i32 %19, i32* %1, align 4
  br label %20

20:                                               ; preds = %18, %15
  %21 = load i32, i32* %1, align 4
  ret i32 %21
}

declare dso_local i32 @get_random_bytes(i32*, i32) #1

declare dso_local i32 @ib_register_client(i32*) #1

declare dso_local i32 @pr_err(i8*) #1

declare dso_local i32 @mcast_init(...) #1

declare dso_local i32 @ib_unregister_client(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
